# deepcutsclub

./: .env  .gitignore  .pre-commit-config.yaml  Dockerfile_api  Dockerfile_frontend  Makefile  README.md  albums_layer_1.pkl  docker-compose.yml  example_album.json  example_album_keys.json  example_artist.json  my_album_credits.pkl  my_albums.pkl  my_collection.pkl  openapi.json  pyproject.toml  run.sh
.github/workflows/: build-test-publish.yaml
deepcutsclub/: ner_spacy.py  wikipedia.py
experiments/: discogs-getting-started.py  ner_spacy.py  networkx_rec.py  recommend.py  spotify_recommend.py  wikipedia.py
experiments/deepcuts/: app.py
experiments/discogs/: __init__.py  discogs.py
scripts/: generate-openapi.py
sdk/python/: .gitlab-ci.yml  .travis.yml  README.md  pyproject.toml  requirements.txt  setup.py  tox.ini
sdk/python/.github/workflows/: python.yml
sdk/python/.openapi-generator/: FILES
sdk/python/deepcuts_sdk/: __init__.py  api_client.py  api_response.py  configuration.py  exceptions.py  rest.py
sdk/python/deepcuts_sdk/api/: __init__.py  deepcuts_api.py
sdk/python/deepcuts_sdk/models/: __init__.py  album.py  body_deepcuts_recommend_albums_from_albums.py  genre.py  get_artist_albums_response.py  get_recommendation_response.py  http_validation_error.py  validation_error.py  validation_error_loc_inner.py
sdk/python/docs/: Album.md  BodyDeepcutsRecommendAlbumsFromAlbums.md  DeepcutsApi.md  Genre.md  GetArtistAlbumsResponse.md  GetRecommendationResponse.md  HTTPValidationError.md  ValidationError.md  ValidationErrorLocInner.md
sdk/python/test/: test_album.py  test_body_deepcuts_recommend_albums_from_albums.py  test_deepcuts_api.py  test_genre.py  test_get_artist_albums_response.py  test_get_recommendation_response.py  test_http_validation_error.py  test_validation_error.py  test_validation_error_loc_inner.py
src/: id.py
src/deepcuts/: app.py
src/deepcuts_api/: __init__.py  _profile.py  collection.py  deepcuts_id.py  errors.py  genres.py  main.py  recommend.py  routes.py  schemas.py  settings.py  spotify.py  wikipedia.py
src/deepcuts_api/discogs/: discogs.py
tests/: __init__.py  conftest.py  consts.py  utils.py
tests/fixtures/: api_client.py  mock_spotify.py  spotify_client.py
tests/unit_tests/: __init__.py  test__discogs.py  test__id.py  test__routes__error_cases.py  test__routes__happy_path.py  test__spotify.py
